cookie provider -> filters layer (as assistants and resources)